# Chaum-Pedersen-Protocol

./: Cargo.toml  README.md
proto/: zkp_auth.proto
src/: client.rs  parameters.rs  server.rs  zkp_utils.rs
