[package]
name = "zkp_chaum_pedersen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.8"
tokio = {version = "1", features = ["full"]}
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num = "0.4.0"
rpassword = "7.2"


[build-dependencies]
tonic-build = "0.8.4"
